objects/Challenge_Reviewer__c.object
<CustomObject>
    <description>The members that are assigned as reviewers for challenges.</description>
    <fields>
        <fullName>Challenge__c</fullName>
        <label>Challenge</label>
        <referenceTo>Challenge__c</referenceTo>
        <relationshipLabel>Reviewers</relationshipLabel>
        <relationshipName>Challenge_Reviewers</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Member__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Member</label>
        <referenceTo>Member__c</referenceTo>
        <relationshipLabel>Challenge Reviewers</relationshipLabel>
        <relationshipName>Challenge_Reviewers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sql_Id__c</fullName>
        <externalId>true</externalId>
        <label>Sql Id</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <label>Challenge Reviewer</label>
    <nameField>
        <displayFormat>CR-{0000}</displayFormat>
        <label>ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Challenge Reviewers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>